HW1 - CreateServlet, DB Singleton + create + sorted desc

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,11 @@
         <servlet-class>ru.javawebinar.topjava.web.MealServlet</servlet-class>
         <load-on-startup>0</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>mealCreateServlet</servlet-name>
+        <servlet-class>ru.javawebinar.topjava.web.MealCreateServlet</servlet-class>
+        <load-on-startup>0</load-on-startup>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>userServlet</servlet-name>
@@ -24,6 +29,10 @@
     <servlet-mapping>
         <servlet-name>mealServlet</servlet-name>
         <url-pattern>/meals</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>mealCreateServlet</servlet-name>
+        <url-pattern>/meals/create</url-pattern>
     </servlet-mapping>
 
 </web-app>
